# gd32-cmake-example

./: .gitignore  CMakeLists.txt  LICENSE  README.md  gd32f450.ld
Examples/: CMakeLists.txt
Examples/ADC/: CMakeLists.txt
Examples/ADC/ADC0_ADC1_ADC2_inserted_parallel/: gd32f4xx_it.c  gd32f4xx_it.h  main.c  readme.txt  systick.h
Examples/ADC/ADC0_ADC1_ADC2_regular_parallel/: main.c  readme.txt
Examples/ADC/ADC0_ADC1_ADC2_routine_parallel/: gd32f4xx_it.c  gd32f4xx_it.h  main.c  readme.txt
Examples/ADC/ADC0_ADC1_regular_parallel/: main.c  readme.txt
Examples/ADC/ADC0_ADC1_routine_parallel/: main.c  readme.txt
Examples/ADC/ADC0_EXTI_trigger_regular_inserted_channel/: gd32f4xx_it.c  main.c  readme.txt
Examples/ADC/ADC0_EXTI_trigger_routine_sequence/: main.c  readme.txt
Examples/ADC/ADC0_TIMER_trigger_injected_channel/: main.c  readme.txt  systick.c
Examples/ADC/ADC0_regular_channel_discontinuous_mode/: gd32f4xx_it.h  main.c  readme.txt
Examples/ADC/ADC0_regular_channel_with_DMA/: main.c  readme.txt
Examples/ADC/ADC0_routine_sequence_discontinuous_mode/: gd32f4xx_it.c  gd32f4xx_it.h  main.c  readme.txt
Examples/ADC/ADC0_routine_sequence_with_DMA/: gd32f4xx_it.c  main.c  readme.txt  systick.c
Examples/ADC/ADC0_software_trigger_regular_channel_polling/: main.c  readme.txt
Examples/ADC/ADC0_software_trigger_routine_channel_polling/: main.c  readme.txt  systick.h
Examples/ADC/ADC0_temperature_Vref_Vbat/: main.c  readme.txt
Examples/ADC/ADC1_analog_watchdog/: CMakeLists.txt  gd32f4xx_it.c  gd32f4xx_it.h  main.c  readme.txt  systick.c
Examples/ADC/ADC1_resolution_oversample/: gd32f4xx_it.c  main.c  readme.txt  systick.c  systick.h
Examples/CAN/: CMakeLists.txt
Examples/CAN/communication_Loopback/: gd32f4xx_it.c  gd32f4xx_it.h  main.c  readme.txt
Examples/CAN/communication_among_CANs/: gd32f4xx_it.c  gd32f4xx_it.h  gd32f4xx_libopt.h  main.c  readme.txt
Examples/CAN/communication_among_Devices/: gd32f4xx_it.c  gd32f4xx_it.h  main.c  readme.txt
Examples/CRC/: CMakeLists.txt
Examples/CRC/CRC_calculate/: main.c  readme.txt
Examples/CTC/: CMakeLists.txt
Examples/CTC/CTC_gpio/: CMakeLists.txt  main.c  readme.txt
Examples/CTC/CTC_lxtal/: main.c  readme.txt
Examples/DAC/: CMakeLists.txt
Examples/DAC/DAC0_ADC_convert/: gd32f4xx_it.c  gd32f4xx_it.h  main.c  readme.txt
Examples/DAC/DAC0_DMA_convert/: main.c  readme.txt
Examples/DAC/DAC0_EXTI_trigger/: main.c  readme.txt
Examples/DAC/DAC0_LFSR_noise_mode/: main.c  readme.txt
Examples/DAC/DAC1_triangle_noise_mode/: main.c  readme.txt
Examples/DAC/DACC_independent_trigger_LFSR_noise/: main.c  readme.txt
Examples/DAC/DACC_output_voltage/: main.c  readme.txt
Examples/DAC/DACC_simultaneous_trigger_triangle_noise/: main.c  readme.txt
Examples/DAC/DACC_software_trigger_LFSR_noise/: main.c  readme.txt
Examples/DAC/DAC_ADC_convert/: gd32f4xx_it.c  gd32f4xx_it.h  main.c  readme.txt  systick.c  systick.h
Examples/DAC/DAC_DMA_convert/: main.c  readme.txt
Examples/DAC/DAC_EXTI_trigger/: main.c  readme.txt
Examples/DAC/DAC_LFSR_noise_mode/: main.c  readme.txt
Examples/DAC/DAC_triangle_noise_mode/: main.c  readme.txt
Examples/DBG/: CMakeLists.txt
Examples/DBG/DBG_timer1_stop/: gd32f4xx_it.h  main.c  readme.txt  systick.h
Examples/DCI/: CMakeLists.txt
Examples/DCI/DCI_OV2640/: CMakeLists.txt  dci_ov2640.c  dci_ov2640.h  dci_ov2640_init_table.h  main.c  readme.txt  sccb.c  sccb.h
Examples/DMA/: CMakeLists.txt
Examples/DMA/Reload_exti/: gd32f4xx_it.c  gd32f4xx_it.h  gd32f4xx_libopt.h  main.c  main.h  readme.txt
Examples/DMA/multi_data_ram_to_ram/: main.c  readme.txt
Examples/DMA/single_data_flash_to_ram/: main.c  readme.txt
Examples/DMA/switch_buffer_mode/: main.c  readme.txt
Examples/ENET/: CMakeLists.txt
Examples/ENET/Telnet/: CMakeLists.txt
Examples/EXMC/: CMakeLists.txt
Examples/EXMC/NAND/: CMakeLists.txt  exmc_nandflash.c  exmc_nandflash.h  main.c  readme.txt
Examples/EXMC/NORFLASH/: CMakeLists.txt  exmc_norflash.c  exmc_norflash.h  main.c  readme.txt
Examples/EXMC/SDRAM/: CMakeLists.txt  exmc_sdram.c  exmc_sdram.h  gd32f4xx_it.c  main.c  readme.txt
Examples/EXMC/SRAM/: CMakeLists.txt  exmc_sram.c  exmc_sram.h  main.c  readme.txt
Examples/EXTI/: CMakeLists.txt
Examples/EXTI/Key_external_interrupt_mode/: CMakeLists.txt  gd32f4xx_it.c  gd32f4xx_it.h  main.c  readme.txt
Examples/FMC/: CMakeLists.txt
Examples/FMC/Program_erase/: CMakeLists.txt  fmc_operation.c  fmc_operation.h  gd32f4xx_it.c  gd32f4xx_it.h  main.c  readme.txt
Examples/FMC/Security_protection/: gd32f4xx_it.c  gd32f4xx_it.h  main.c  readme.txt
Examples/FMC/Write_protection/: main.c  main.h  readme.txt
Examples/FWDGT/: CMakeLists.txt
Examples/FWDGT/FWDGT_key/: gd32f4xx_it.c  gd32f4xx_it.h  main.c  readme.txt  systick.c
Examples/GPIO/: CMakeLists.txt
Examples/GPIO/Keyboard_polling_mode/: CMakeLists.txt  gd32f4xx_it.c  main.c  readme.txt  systick.h
Examples/GPIO/Running_led/: CMakeLists.txt  gd32f4xx_it.h  gd32f4xx_libopt.h  main.c  readme.txt  systick.c  systick.h
Examples/I2C/: CMakeLists.txt
Examples/I2C/I2C_EEPROM/: at24cxx.c  at24cxx.h  gd32f4xx_it.c  gd32f4xx_it.h  i2c.c  i2c.h  main.c  readme.txt  systick.c  systick.h
Examples/I2C/I2C_EEPROM_dma/: CMakeLists.txt  at24cxx.c  at24cxx.h  gd32f4xx_it.c  gd32f4xx_libopt.h  i2c.c  (+5 more)
Examples/IPA/: CMakeLists.txt
Examples/IREF/: CMakeLists.txt
Examples/PMU/: CMakeLists.txt
Examples/RCU/: CMakeLists.txt
Examples/RTC/: CMakeLists.txt
Examples/SDIO/: CMakeLists.txt
Examples/SPI/: CMakeLists.txt
Examples/TIMER/: CMakeLists.txt
Examples/TLI/: CMakeLists.txt
Examples/TRNG/: CMakeLists.txt
Examples/USART/: CMakeLists.txt
Examples/USB/: CMakeLists.txt
Examples/WWDGT/: CMakeLists.txt
Firmware/GD32F4xx_standard_peripheral/: CMakeLists.txt
Utilities/: CMakeLists.txt  gd32f450i_eval.c  gd32f450i_eval.h  gd32f450i_eval_exmc_sdram.c  gd32f450i_eval_exmc_sdram.h  gd32f450i_lcd_eval.c  gd32f450i_lcd_eval.h  gd32f450z_eval.c  gd32f450z_eval.h
Utilities/LCD_common/: lcd_font.c  lcd_font.h  lcd_log.c  lcd_log.h
(+734 files in other folders)
