add_subdirectory(ADC)
add_subdirectory(CAN)
add_subdirectory(CRC)
add_subdirectory(CTC)
add_subdirectory(DAC)
add_subdirectory(DBG)
add_subdirectory(DCI)
add_subdirectory(DMA)
add_subdirectory(ENET)
add_subdirectory(EXMC)
add_subdirectory(EXTI)
add_subdirectory(FMC)
add_subdirectory(FWDGT)
add_subdirectory(GPIO)
add_subdirectory(I2C)
add_subdirectory(IPA)
add_subdirectory(IREF)
add_subdirectory(PMU)
add_subdirectory(RCU)
add_subdirectory(RTC)
add_subdirectory(SDIO)
add_subdirectory(SPI)
add_subdirectory(TIMER)
add_subdirectory(TLI)
add_subdirectory(TRNG)
add_subdirectory(USART)
add_subdirectory(USB)
add_subdirectory(WWDGT)