add_subdirectory(ADC0_ADC1_ADC2_inserted_parallel)
add_subdirectory(ADC0_ADC1_ADC2_regular_parallel)
add_subdirectory(ADC0_ADC1_regular_parallel)
add_subdirectory(ADC0_EXTI_trigger_regular_inserted_channel)
add_subdirectory(ADC0_regular_channel_discontinuous_mode)
add_subdirectory(ADC0_regular_channel_with_DMA)
add_subdirectory(ADC0_software_trigger_regular_channel_polling)
add_subdirectory(ADC0_temperature_Vref_Vbat)
add_subdirectory(ADC0_TIMER_trigger_injected_channel)
add_subdirectory(ADC1_analog_watchdog)
add_subdirectory(ADC1_resolution_oversample)