add_subdirectory(DAC_ADC_convert)
add_subdirectory(DAC_DMA_convert)
add_subdirectory(DAC_EXTI_trigger)
add_subdirectory(DAC_LFSR_noise_mode)
add_subdirectory(DAC_triangle_noise_mode)
#add_subdirectory(DAC0_ADC_convert)
#add_subdirectory(DAC0_DMA_convert)
#add_subdirectory(DAC0_EXTI_trigger)
#add_subdirectory(DAC0_LFSR_noise_mode)
#add_subdirectory(DAC1_triangle_noise_mode)
add_subdirectory(DACC_independent_trigger_LFSR_noise)
add_subdirectory(DACC_output_voltage)
add_subdirectory(DACC_simultaneous_trigger_triangle_noise)
add_subdirectory(DACC_software_trigger_LFSR_noise)