add_subdirectory(I2C_EEPROM)
add_subdirectory(I2C_EEPROM_dma)
add_subdirectory(I2C_EEPROM_interrput)
add_subdirectory(Master_receiver)
add_subdirectory(Master_receiver_one_byte)
add_subdirectory(Master_receiver_slave_transmitter)
add_subdirectory(Master_receiver_slave_transmitter_interrupt)
add_subdirectory(Master_receiver_two_bytes)
add_subdirectory(Master_transmitter)
add_subdirectory(Master_transmitter_slave_receiver)
add_subdirectory(Master_transmitter_slave_receiver_dma)
add_subdirectory(Master_transmitter_slave_receiver_interrupt)
add_subdirectory(Slave_receiver)
add_subdirectory(Slave_transmitter)