add_subdirectory(I2S_fullduplex_dma)
add_subdirectory(I2S_master_slave_fullduplex_dma)
add_subdirectory(Master_slave_fullduplex_dma)
add_subdirectory(Master_slave_fullduplex_polling)
add_subdirectory(Master_slave_fullduplex_ti_mode)
add_subdirectory(Master_transmit_slave_receive_interrupt)
add_subdirectory(SPI_master_slave_fullduplex_dma)
add_subdirectory(SPI_master_slave_fullduplex_polling)
add_subdirectory(SPI_master_slave_fullduplex_ti_mode)
add_subdirectory(SPI_master_transmit_slave_receive_interrupt)