add_subdirectory(TIMER0_6-steps)
add_subdirectory(TIMER0_complementarysignals)
add_subdirectory(TIMER0_deadtime_break)
add_subdirectory(TIMER0_dma)
add_subdirectory(TIMER0_dma_burst)
add_subdirectory(TIMER1_exttrigger)
add_subdirectory(TIMER1_ocactive)
add_subdirectory(TIMER1_octoggle)
add_subdirectory(TIMER1_pwmout)
add_subdirectory(TIMER1_singlepulse)
add_subdirectory(TIMER2_inputcapture)
add_subdirectory(TIMER2_pwminputcapture)
add_subdirectory(TIMERs_cascadesynchro)