add_subdirectory(audio)
add_subdirectory(cdc_acm)
add_subdirectory(composite_dev_hid_printer)
add_subdirectory(custom_hid)
add_subdirectory(dev_firmware_update)
add_subdirectory(dual_core)
# add_subdirectory(in_application_program_hid)
add_subdirectory(msc_cdrom)
add_subdirectory(msc_udisk)
add_subdirectory(standard_hid_keyboard)
add_subdirectory(usb_printer)